src/test/ui/parser/else-no-if.stderr
error: expected `{`, found keyword `false`
  --> $DIR/else-no-if.rs:3:12
   |
LL |     } else false {
   |       ---- ^^^^^
   |       |
   |       expected an `if` or a block after this `else`
   |
help: add an `if` if this is the condition to an chained `if` statement after the `else`
   |
LL |     } else if false {
   |            ++
help: ... otherwise, place this expression inside of a block if it is not an `if` condition
   |
LL |     } else { false } {
   |            +       +

error: expected `{`, found `falsy`
  --> $DIR/else-no-if.rs:10:12
   |
LL |     } else falsy() {
   |       ---- ^^^^^
   |       |
   |       expected an `if` or a block after this `else`
   |
help: add an `if` if this is the condition to an chained `if` statement after the `else`
   |
LL |     } else if falsy() {
   |            ++
help: ... otherwise, place this expression inside of a block if it is not an `if` condition
   |
LL |     } else { falsy() } {
   |            +         +

error: expected `{`, found `falsy`
  --> $DIR/else-no-if.rs:17:12
   |
LL |     } else falsy();
   |            ^^^^^ expected `{`
   |
help: try placing this code inside a block
   |
LL |     } else { falsy() };
   |            +         +

error: expected `{`, found keyword `loop`
  --> $DIR/else-no-if.rs:23:12
   |
LL |     } else loop{}
   |            ^^^^ expected `{`
   |
help: try placing this code inside a block
   |
LL |     } else { loop{} }
   |            +        +

error: aborting due to 4 previous errors

